Fix overlapping itens in directory permission checks in installation wizard
Issue #3449.

--- a/include/themes/classic/main.css
+++ b/include/themes/classic/main.css
@@ -1245,20 +1245,18 @@ legend {
 }
 
 .formRow {
-	display: table-row;
 	width: 100%;
 	line-height: 30px;
+	overflow: hidden;
 }
 
 .formColumn {
 	float: left;
-	display: table-column;
 	text-align: left;
 }
 
 .formColumnLeft {
 	float: left;
-	display: table-column;
 	padding-left: 4px;
 	width: 45%;
 	text-align: left;
@@ -1266,7 +1264,6 @@ legend {
 
 .formColumnRight {
 	float: left;
-	display: table-column;
 	width: 45%;
 	text-align: left;
 }
